--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ nav a {
 ---------------------*/
 .education {
     background: linear-gradient(rgba(137, 124, 128, 0.8), rgba(137, 124, 128, 0.5)),
-                 url(../Sources/city.jpg) no-repeat fixed;
+                 url(taylorbailey97.github.io/city.jpg) no-repeat fixed;
     background-size: cover;
 }
 
