--- a/CIT 230/styles/main.css
+++ b/CIT 230/styles/main.css
@@ -1,21 +1,156 @@
+/* Global styles
+*********************/
+html{
+    box-sizing: border-box;
+} *, *:before, *:after {
+    box-sizing: inherit;
+}
+
+a:hover {
+    color: red;
+    padding: 10px;
+    background: white;
+}
+
+.photo{
+    border-radius: 50%;
+    width: 190px;
+    height: 170px;
+    float: right;
+    overflow: hidden;
+}
+
+.photobasicpage{
+    border-radius: 8px;
+    width: 190px;
+    height: 170px;
+    float: right;
+    overflow: hidden;
+}
+
 /* Body text
 *********************/
 body {
-    background: yellow;
+    color: white;
+    background: white;
+    text-align: left;
+    font-family: 'Open Sans', sans-serif;
+    margin: 0;
+    text-align: left;
+}
+
+h1 {
+    display: block;
+    margin: 0 auto;
+    font-size: 60px;
+}
+
+h1, h2 {
+    font-family: 'Caveat', cursive;
+    margin: 0;
 }
 
 h2 {
-    background: blue;
+    font-size:  40px;
+    margin-top: 0px;
+    margin-bottom: 20px;
 }
 
+.content-wrap {
+    max-width: 950px;
+    margin: 0 auto;
+    padding: 60px 50px;
+    overflow: hidden;
+}
+
+.blocking-large{
+    width: 40%;
+    float: left;
+    padding-left: 20px; 
+    overflow: hidden;
+}
+
+.blocking-small{
+    width: 60%;
+    float: left;
+    overflow: hidden;
+}
 
 /* Header 
 ********************/
 header {
-    background: #5B618A;
+    background: #CF5C36;
+    position: relative;
+    margin: 0;
 }
 
-nav:hover {
-    background: white;
-    color: red;
+header h1, header h2{
+    margin: 0;
+}
+
+
+/* Work
+*******************/
+.work {
+    background: #153243;
+    margin: 0 auto;
+    overflow: hidden;
+    
+}
+.work p{
+    font-weight: bold;
+}
+
+
+
+
+/* Education
+*******************/
+.education {
+    background: #4D5057;
+    background-size: cover;  
+    background: linear-gradient(rgba(137, 124, 128, 0.7), rgba(137, 124, 128, 1)), 
+                 url(../images/codes-coding-computer-247791.jpg) no-repeat fixed;
+}
+
+
+
+
+/* Footer
+******************/
+footer {
+    text-align: center;
+    background: #065A82;
+    margin: 0px;
+    padding: 20px;
+    position: inherit;
+}
+
+footer a {
+    padding: 20px;
+    color: white;
+    font-style: bold;
+    font-size: 15px;
+}
+
+/* Navigation
+********************/
+nav {
+    text-align: center;
+    background: #004E98;
+    position: fixed;
+    right: 0;
+    left: 0;
+    top: 0;
+    padding: 0;
+    width: 100%;
+    margin-top: 0;
+}
+nav a {
+    display: inline-block;
+    padding: 15px 20px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: white;
 }
