--- a/CIT 230/styles/main.css
+++ b/CIT 230/styles/main.css
@@ -6,10 +6,14 @@ html{
     box-sizing: inherit;
 }
 
-a:hover {
+header a:hover, footer a:hover {
     color: red;
     padding: 10px;
     background: white;
+}
+
+ul {
+    list-style-type: none;
 }
 
 .photo{
@@ -21,8 +25,8 @@ a:hover {
 }
 
 .photobasicpage{
-    border-radius: 8px;
-    width: 190px;
+    border-radius: 20px;
+    width: 170px;
     height: 170px;
     float: right;
     overflow: hidden;
@@ -37,6 +41,10 @@ body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
     text-align: left;
+}
+
+a:hover {
+    background: #004E98;
 }
 
 h1 {
@@ -54,6 +62,17 @@ h2 {
     font-size:  40px;
     margin-top: 0px;
     margin-bottom: 20px;
+}
+
+.assignments {
+    background-size: cover;
+    background: linear-gradient(rgba(137, 124, 128, 1), rgba(137, 124, 128, .7)), 
+                 url(../images/homework2.jpg) no-repeat fixed;
+}
+
+.assignments a {
+    color: white;
+
 }
 
 .content-wrap {
@@ -110,7 +129,7 @@ header h1, header h2{
     background: #4D5057;
     background-size: cover;  
     background: linear-gradient(rgba(137, 124, 128, 0.7), rgba(137, 124, 128, 1)), 
-                 url(../images/codes-coding-computer-247791.jpg) no-repeat fixed;
+                 url(../images/education.jpg) no-repeat fixed;
 }
 
 
@@ -119,6 +138,7 @@ header h1, header h2{
 /* Footer
 ******************/
 footer {
+    color: white;
     text-align: center;
     background: #065A82;
     margin: 0px;
