franklin page added to assignments page

--- a/cit230/styles/main.css
+++ b/cit230/styles/main.css
@@ -9,8 +9,8 @@ body {
     font-size: 16px; 
     line-height: 32px;
     font-family:  Ubuntu, sans-serif ;
-    background: #2B2D42; 
-    color: white;
+    /*background: #2B2D42; */
+    /*color: white;*/
 }
 
 h1 {
