--- a/cit230/lesson-6/weatherpage/css/main-5.css
+++ b/cit230/lesson-6/weatherpage/css/main-5.css
@@ -8,13 +8,16 @@ body {
 }
 
 header, nav, main, footer { 
-  max-width: 400px; 
+  max-width: 600px; 
+  margin: 0 auto;
   text-align: center;
 }
 
 /*Header
 ************************/
-header {}
+header {
+    background: #28536B;
+}
 header h1 {}
 header img {
     width: 40px;
@@ -22,11 +25,13 @@ header img {
 }
 header .subheading {}
 
-
+button {}
 /*Navigation
 ************************/
-nav {}
-nav button {}
+nav {
+    background: #333;
+}
+
 nav ul {
     list-style: none;
     margin: 0;
@@ -36,17 +41,27 @@ nav ul {
     text-align: center;
 }
 nav ul li {
-    display: inline-block;
+    display: block;
 }
 nav ul li a {
     text-decoration: none;
-    display: inline-block;
+    display: block;
     padding: 15px;
-    margin:  0px;
+    color: white;
 }
 nav ul li.active a {}
 nav ul li a:hover {
-    background-color: #4CAF50;
+    background: darkgreen;
+}
+
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+    display: none;
+}
+
+.responsive {
+    display: block;
 }
 
 /*Main
@@ -55,8 +70,8 @@ main {}
 main h2 {}
 main figure { margin: 0 0 .2rem 2%; width:96%; }
 main img {
-    max-width: 200px;
-    max-height: 200px;
+/*    max-width: 200px;
+    max-height: 200px;*/
 }
 main figure img {
     /*width: 400px;
