--- a/cit230/lesson-8/css/main-5.css
+++ b/cit230/lesson-8/css/main-5.css
@@ -55,6 +55,11 @@ nav ul li a:hover {
     background: darkgreen;
 }
 
+h2 a {
+    text-decoration: none;
+    color: white;
+}
+
 .topnav {
     background-color: #333;
     overflow: hidden;
