--- a/cit230/lesson-8/css/main-5.css
+++ b/cit230/lesson-8/css/main-5.css
@@ -118,8 +118,22 @@ form div {
 
 /*Footer
 ************************/
-footer {}
+footer {
+    background: #333;
+    color: white;
+    margin: 0 auto;
+}
 
+footer a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 5px;
+    color: white;
+}
+
+footer a:hover {
+    background: darkgreen;
+}
 
 
 
