--- a/cit230/lesson-7/css/gallery.css
+++ b/cit230/lesson-7/css/gallery.css
@@ -1,17 +1,27 @@
-header, body, main, footer {
-    max-width: 600px;
+* { box-sizing: border-box;}
+
+/* Content
+************************/
+
+body {
+    margin: 0;
+    max-width: 100%;
+}
+
+header, main, footer {
     margin: 0 auto;
     text-align: center;
 }
 
 header {
     background: #28536B;
-    text-align: center;
+    margin-bottom: 5px;
 }
 
 header img {
-    width: 40px;
-    height: 40px;
+    float: left;
+    width: 80px;
+    height: 80px;
 }
 
 header a {
@@ -21,26 +31,46 @@ header a {
 
 header h1 {
     margin: 0;
+    font-size: 60px;
 }
 
-nav ul {
+
+/* Nav
+************************/
+nav {
     background: #333;
 }
 
+nav ul {}
+
 nav li {
     list-style: none;
-    margin: 20px;
-    display: inline-block;
+    margin: 40px;
+    display: block;
+    overflow: hidden;
 }
 
 nav a {
-    padding: 20px; 
+    font-size: 40px;
+    padding: 80px;
 }
 
 nav a:hover {
     background: darkgreen;
 }
 
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+    display: none;
+}
+
+.responsive {
+    display: contents;
+}
+
+/* Main
+************************/
 
 .container {
     display: grid;
@@ -50,6 +80,24 @@ nav a:hover {
 }
 
 .grid-item {
-    width: 400px;
-    height: 400px;
+    border: 2px solid black;
+    background: #fffff2;
+}
+
+.grid-item img{
+    max-width: 100%;
+    max-height: auto;
+}
+
+.grid-item p {
+    max-width: 500px;
+}
+
+/*Footer
+************************/
+footer {
+    margin-top: 20px;
+    background: #28536B;
+    padding: 20px;
+    color: white;
 }
