--- a/cit230/lesson-9/css/gallery.css
+++ b/cit230/lesson-9/css/gallery.css
@@ -1,4 +1,3 @@
-
 header, nav, main, footer { 
   max-width: 600px; 
   margin: 0 auto;
@@ -15,6 +14,7 @@ body {
 header {
     background: #28536B;
     color: white;
+    margin-bottom: 5px;
 }
 header h1 {
     margin: 0 auto;
@@ -26,7 +26,9 @@ header img {
 header .subheading {}
 
 button {}
-/*Navigation
+
+
+/* Nav
 ************************/
 nav {
     background: #333;
@@ -70,31 +72,29 @@ h2 a {
     display: block;
 }
 
-/*Body
+/* Main
 ************************/
-    /*towns
-    ************************/
-    #towns {
-        display: grid;
-        grid-template-columns: 1fr;
-        
-    }
-    
-    #towns article {
-        text-align: left;
-        margin: 5px;
-        border: 2px solid black;
-    }
-    #towns h1, #towns h2 {  
-        text-align: center;
-        margin: 0px;
-        font-size: 2.0em;
-    }
 
-    #towns p {
-        margin-left: 5px;
-    }
+.container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-row-gap: 20px;
+    justify-items: center;
+}
 
+.grid-item {
+    border: 2px solid black;
+    background: #fffff2;
+}
+
+.grid-item img{
+    max-width: 100%;
+    max-height: auto;
+}
+
+.grid-item p {
+    max-width: 500px;
+}
 
 /*Footer
 ************************/
@@ -103,4 +103,3 @@ footer {
     padding: 10px 0;
     color: white;
 }
-
