--- a/cit230/lesson-7/css/gallery.css
+++ b/cit230/lesson-7/css/gallery.css
@@ -1,5 +1,9 @@
-header, body, main, footer {
-    max-width: 600px;
+body {
+    max-width: 100%;
+}
+
+header, main, footer {
+    /*max-width: 100%;*/
     margin: 0 auto;
     text-align: center;
 }
@@ -7,6 +11,7 @@ header, body, main, footer {
 header {
     background: #28536B;
     text-align: center;
+    margin: 
 }
 
 header img {
@@ -16,6 +21,7 @@ header img {
 
 header a {
     text-decoration: none;
+    font-size: 4rem;
     color: white;
 }
 
@@ -30,7 +36,7 @@ nav ul {
 nav li {
     list-style: none;
     margin: 20px;
-    display: inline-block;
+    display: block;
 }
 
 nav a {
@@ -50,6 +56,8 @@ nav a:hover {
 }
 
 .grid-item {
-    width: 400px;
-    height: 400px;
+    max-width: 600px;
+    width: 100%;
+    max-height: 600px;
+    height: auto;
 }
