--- a/cit230/lesson-9/css/medium-5.css
+++ b/cit230/lesson-9/css/medium-5.css
@@ -28,6 +28,7 @@
     }
     
     .tableBody-flex {
+        margin-top: 5px;
         display: flex;
         justify-content: space-around;
         justify-content: center;
