--- a/term-website/css/bikes.css
+++ b/term-website/css/bikes.css
@@ -20,8 +20,10 @@ article h3 {
 }
 
 h4,
-p {
+article p {
     margin: 0;
+    margin-top: 5px;
+    font-size: 1.3em;
 }
 
 .active, .accordion:hover {
